--- a/EncryptionProject/src/encryptionproject/UIpackage/AesMenuUI.form
+++ b/EncryptionProject/src/encryptionproject/UIpackage/AesMenuUI.form
@@ -90,6 +90,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Decryption"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="decButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
