--- a/EncryptionProject/src/encryptionproject/UIpackage/OutputFormUI.form
+++ b/EncryptionProject/src/encryptionproject/UIpackage/OutputFormUI.form
@@ -27,7 +27,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="outputScrollPane" max="32767" attributes="0"/>
-                  <Component id="titleLabel" alignment="0" pref="380" max="32767" attributes="0"/>
+                  <Component id="titleLabel" alignment="0" max="32767" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="backButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
